# weibo-desktop

./: .env  .env.db  .env.example  .env.test  .gitignore  .playwright-docker.yml  API.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.playwright  E2E_COMMANDS_CHEATSHEET.md  E2E_SETUP_SUMMARY.md  E2E_TESTING_COMPLETE.md  E2E_TESTING_GUIDE.md  IMPLEMENTATION_NOTE.md  KNOWN_LIMITATIONS.md  PHASE7_COMPLETION_REPORT.md  PHASE7_FILES.md  PHASE8_SUMMARY.md  PHASE9_COMPLETION_REPORT.md  PHASE9_FILES.md  PLAYWRIGHT_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_E2E_TESTING.md  QUICKSTART_PLAYWRIGHT.md  README.md  TEST_ARCHITECTURE.md  TEST_SUMMARY.md  docker-compose.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  run_tests.sh  test-redis-config.sh  test-redis-simple.sh
.claude/: settings.local.json
.specify/memory/: constitution.md
docker/: README.md
docker/rabbitmq/: definitions.json  rabbitmq.conf
docs/: WSL2-DOCKER-REDIS.md  dependency_error_implementation.md  poc-rust-browser.md
e2e/: README.md  accessibility.spec.ts  login.spec.ts  tsconfig.json
migrations/: 001_initial_schema.sql
playwright/: ARCHITECTURE.md  PHASE6_CHECKLIST.md  README.md  README_CRAWLER.md  package.json  pnpm-lock.yaml  test-validate.sh
playwright/.sessions/: debug-page.html  qr_1759667965595_zjy3wzd.json  qr_1759667965595_zjy3wzd_state.json  qr_1759668002827_lkbhyjx.json  qr_1759668002827_lkbhyjx_state.json
playwright/src/: browser.ts  types.ts  validate-cookies.ts  weibo-crawler.ts  weibo-login-server.ts  weibo-login.ts  weibo-service.ts
scripts/: check-test-env.sh  run-e2e-tests.sh  start-playwright-server.sh
specs/001-cookies/: data-model.md  phase1-summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-/: T040_端到端测试验证报告.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-div-class/: TESTING.md  fix-summary.md  implementation-summary.md  spec.md
src/: App.tsx  README.md  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dependency_error_demo.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: cookies_commands.rs  crawl_commands.rs  crawl_commands_simple.rs  dependency_commands.rs  log_commands.rs  mod.rs  playwright_commands.rs  qrcode_commands.rs  redis_commands.rs  system_commands.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: cookies_data.rs  crawl_checkpoint.rs  crawl_events.rs  crawl_task.rs  dependency.rs  errors.rs  events.rs  frontend_log.rs  login_event.rs  login_session.rs  mod.rs  redis_config.rs  weibo_post.rs
src-tauri/src/models/postgres/: mod.rs  queries.rs
src-tauri/src/services/: browser_service_poc.rs  config_service.rs  crawl_service.rs  crawl_service_simple.rs  dependency_checker.rs  dependency_checker.rs.backup  dependency_checker_test.rs  installer_service.rs  logger_service.rs  mod.rs  redis_service.rs  session_manager.rs  time_shard_service.rs  validation_service.rs  websocket_server_poc.rs  weibo_api.rs  weibo_login_service_poc.rs
src-tauri/src/utils/: logger.rs  mod.rs  time_utils.rs  version.rs
src-tauri/tests/: README.md  contract_check_dependencies.rs  contract_install_dependency.rs  contract_list_crawl_tasks.rs  contract_manual_check.rs  contract_manual_check_summary.md  contract_pause_crawl.rs  contract_query_cookies.rs  contract_query_status.rs  contract_save_cookies.rs  contract_start_crawl.rs  dependency_checker_test.rs  installer_demo.rs  installer_service_test.rs  integration_all_satisfied.rs  integration_auto_install.rs  integration_manual_guide.rs  integration_permission_error.rs  integration_runtime_check.rs  integration_test.rs  models_test.rs  performance_test.rs  redis_crawl_storage_test.rs  test_dependency_check_result_serialization.rs  test_dependency_error.rs  test_installer_service.rs  test_save_cookies_error_format.rs  test_scenario_4_history_completed.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/integration/: mod.rs
src-tauri/tests/performance/: PERFORMANCE_TEST_REPORT.md  README.md  test_redis_connection.rs  test_redis_performance.rs
src-tauri/tests/unit/: mod.rs  test_crawl_task_model.rs  test_time_utils.rs  test_weibo_post_validation.rs
src/components/: ConfirmDialog.tsx  CrawlProgress.tsx  CrawlTaskForm.tsx  CrawlTaskList.tsx  CrawlTaskListSimple.tsx  CreateTaskSimple.tsx  DependencyProgress.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  ExportDialog.tsx  InstallationGuide.tsx  Layout.tsx  LoadingSkeleton.tsx  LoginStatus.tsx  Navbar.tsx  QrcodeDisplay.tsx  Toast.tsx
src/constants/: installGuides.ts  ui.ts
src/hooks/: useCrawlExport.ts  useCrawlProgress.ts  useCrawlTask.ts  useKeyboardShortcut.ts  useToast.ts
tests/: lib.rs
(+45 files in other folders)
